tests/sumo/basic/tls/NEMA/errors/1_ignore/errors.sumo
Warning: At NEMA tlLogic '2881', Ring 1 does not add to cycle length.
Warning: At NEMA tlLogic '2881', Ring 2 does not add to cycle length.
Warning: At NEMA tlLogic '2881', the phases before barrier 2 from both rings do not add up. (ring1=125.50, ring2=119.50)
